Solve overlapping problem on mobile phones

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -238,6 +238,10 @@ aside.home-liste-news ul li {
 	text-decoration: underline;
 }
 
+#rightside_wrapper {
+	overflow:scroll;
+}
+
 /* ------------- About Page ------------- */
 #icon_list {
 	margin: 0 auto;
